# coding-test

./: README.md  docker-compose.yml  question.md
src/: Dockerfile  alembic.ini  answer.py  eav_model.py  init_data.sql  load_data.py  pyproject.toml
src/migration/: env.py
src/migration/versions/: afcb25d4aef4_init.py
